infra/environments/int/health-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swirl-demo-app-health
  namespace: apps-int
  annotations:
    argocd.argoproj.io/sync-wave: '10'
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
    traefik.ingress.kubernetes.io/router.middlewares: apps-int-swirl-demo-app-health@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - demo-int.swirlit.dev
  rules:
  - host: demo-int.swirlit.dev
    http:
      paths:
      - path: /health/user
        pathType: Exact
        backend:
          service:
            name: swirlapp-user
            port:
              number: 8080
      - path: /health/order
        pathType: Exact
        backend:
          service:
            name: swirlapp-order
            port:
              number: 8081
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: swirl-demo-app-health
  namespace: apps-int
spec:
  replacePath:
    path: /actuator/health
